@@ -18,7 +18,7 @@
     <parent>
         <groupId>org.finos.legend.engine</groupId>
         <artifactId>legend-engine</artifactId>
-        <version>2.59.2-SNAPSHOT</version>
+        <version>2.60.1-SNAPSHOT</version>
     </parent>
     <modelVersion>4.0.0</modelVersion>
     <artifactId>legend-engine-executionPlan-execution-store-relational-connection-tests</artifactId>
@@ -860,6 +860,34 @@
             </dependencies>
         </profile>
         <profile>
+            <id>run-redshift-integration</id>
+            <build>
+                <plugins>
+                    <plugin>
+                        <artifactId>maven-surefire-plugin</artifactId>
+                        <dependencies>
+                            <dependency>
+                                <groupId>org.apache.maven.surefire</groupId>
+                                <artifactId>surefire-junit47</artifactId>
+                                <version>2.22.0</version>
+                            </dependency>
+                        </dependencies>
+                        <!-- Without override, surefire configuration would have skipped our integration tests -->
+                        <configuration combine.self="override">
+                            <useSystemClassLoader>false</useSystemClassLoader>
+                            <argLine>${argLine} -Xmx2g -Xms1g -XX:MaxPermSize=1024m -XX:SoftRefLRUPolicyMSPerMB=1</argLine>
+                            <!--
+                            <environmentVariables>
+                                <REDSHIFT_LEGEND_INTEG_USERNAME></REDSHIFT_LEGEND_INTEG_USERNAME>
+                                <REDSHIFT_LEGEND_INTEG_PASSWORD></REDSHIFT_LEGEND_INTEG_PASSWORD>
+                            </environmentVariables>
+                            -->
+                        </configuration>
+                    </plugin>
+                </plugins>
+            </build>
+        </profile>
+        <profile>
             <id>run_tests_in_teamcity</id>
             <build>
                 <plugins>
@@ -879,6 +907,7 @@
     </profiles>
 
     <dependencies>
+
         <!-- ENGINE -->
         <dependency>
             <groupId>org.finos.legend.engine</groupId>
@@ -961,13 +990,11 @@
         <dependency>
             <groupId>org.testcontainers</groupId>
             <artifactId>testcontainers</artifactId>
-            <version>1.16.2</version>
             <scope>test</scope>
         </dependency>
         <dependency>
             <groupId>org.testcontainers</groupId>
             <artifactId>mssqlserver</artifactId>
-            <version>1.16.2</version>
             <scope>test</scope>
         </dependency>
         <!-- Test -->
